--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 {% block content %}
     <h1> Login</h1>
     
-    <form action="/handle_login" method="get" id="form1">
+    <form action="/design" method="get" id="form1">
         <label for="user">Username:</label>
         <input type="text" id="user" name="user"><br><br>
 
