--- a/templates/design.html
+++ b/templates/design.html
@@ -23,9 +23,13 @@
         }
         form{
             width: 100%;
-        }     
+        }   
+        .organise{
+        width: 240px;
+        display:inline-block;
+    }  
     </style>
-
+    
     <form action="" method="post" id="form" class="form">
         <label for="itext">Text:</label>
         <input type="text" id="itext" name="itext"><br><br>
