errors with pylint fixed

--- a/templates/design.html
+++ b/templates/design.html
@@ -35,11 +35,11 @@
         <input type="text" id="itext" name="itext"><br><br>
 
          <!----------BUTTONS--------->  
-         <div class="btn-group">
-            <a href="/handle_save" type="button" form="form" class="button btn-info">SAVE</a>
-            <a href="/design" type="button" form="form" class="button btn-info">RECORD</a>
-            <a href="/design" type="button" form="form" class="button btn-info">PLAY</a>
-            <a href="/design" type="button" form="form" class="button btn-info">DELETE</a>
+         <div class="btn-group" method="GET">
+            <a href="/design_handle" type="button" form="form" class="button btn-info">SAVE</a>
+            <a href="/design_handle" type="button" form="form" class="button btn-info">RECORD</a>
+            <a href="/design_handle" type="button" form="form" class="button btn-info">PLAY</a>
+            <a href="/design_handle" type="button" form="form" class="button btn-info">DELETE</a>
          </div>         
     </form>  
 
