--- a/templates/login.html
+++ b/templates/login.html
@@ -6,17 +6,33 @@
     {% endif %}             
 </head>
 
+<style>
+    .button{
+        display: block;
+        width: 115px;
+        height: 45px;
+        background: rgb(69, 162, 185);
+        padding: 10px;
+        text-align: center;
+        border-radius: 5px;
+        color: white;
+        font-weight: bold;
+    }
+</style>
+
 {% extends "layout.html" %}
 {% block content %}
+
     <h1> Login</h1>
+
     <form action="/design" method="get" id="form1">
         <label for="user">Username:</label>
         <input type="text" id="user" name="user"><br><br>
-    
+
         <label for="pass">Password:</label>
         <input type="text" id="pass" name="pass"><br><br>
-    
-        <button type="submit" form="form1" value="Login">Login</button>
+        
+        <a href="/design_handle" type="button" form="form1" class="button btn-info">LOG IN</a>
         
     </form>
     
