--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,11 +46,12 @@
             {% for message in messages %}
                 <div class="alert alert-warning alert-dismissible" role="alert">
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    CLOSE
+                    <b>x</b>
                   </button>
                   {{ message }}
                 </div>
             {% endfor %}
+        <p color:red> {{ message }} </p>
         {% endif %}
         {% endwith %}
         <div class="row">
