--- a/templates/login.html
+++ b/templates/login.html
@@ -7,16 +7,17 @@
 </head>
 
 <style>
-    .button{
-        display: block;
-        width: 115px;
-        height: 45px;
-        background: rgb(69, 162, 185);
-        padding: 10px;
-        text-align: center;
-        border-radius: 5px;
-        color: white;
-        font-weight: bold;
+    input[type="submit"]{
+            display: block;
+            width: 115px;
+            height: 45px;
+            background: rgb(69, 162, 185);
+            padding: 10px;
+            text-align: center;
+            border-radius: 5px;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
     }
 </style>
 
@@ -25,15 +26,16 @@
 
     <h1> Login</h1>
 
-    <form action="/design" method="get" id="form1">
+    <form action="/design_handle" method="GET" id="l_form">
         <label for="user">Username:</label>
         <input type="text" id="user" name="user"><br><br>
 
         <label for="pass">Password:</label>
         <input type="text" id="pass" name="pass"><br><br>
-        
-        <a href="/design_handle" type="button" form="form1" class="button btn-info">LOG IN</a>
-        
+
+        <div class="btn-group">
+            <input type="submit" value="Log In">
+        </div>  
     </form>
     
 {% endblock content %}
