--- a/templates/register.html
+++ b/templates/register.html
@@ -12,12 +12,11 @@
         display:inline-block;
     }
 </style>
-
 {% extends "layout.html" %}
 {% block content %}
 <div class = "content-section">
-    <form method ="POST" action="">
-        {{ form.hidden_tag() }} <!---- protecting the form-->
+    <form method ="POST" action="/register">
+        {{ form.hidden_tag() }} <!---- protecting the form ----->
         <fieldset class = "form-group">
             <legend class="border-botton mb-4"> Join </legend>
             <div>
