--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
 {% extends "layout.html" %}
 {% block content %}
         <p>
-            Naledi is a multilingual personal banking and financial management assistant powered by Artificial Intelligence. She is built to help banks unleash the power of conversational commerce
+            Thetha is a multilingual Text-To-Speech platform designed by Botlhale AI. 
         </p>
         <a href="mailto:messenger@botlhale.ai">Contact Us</a>
 {% endblock content %}
