--- a/templates/home_layout.html
+++ b/templates/home_layout.html
@@ -13,7 +13,7 @@
     {% if title %}
         <title> {{ title }}</title>
     {% else %}
-        <title>BOTLHALE</title>
+        <title>Thetha</title>
     {% endif %}
 </head>
 
@@ -21,7 +21,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="/"> TTS Platform</a>
+            <a class="navbar-brand mr-4" href="/"> THETHA </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
