--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="/"> TTS Platform</a>
+            <a class="navbar-brand mr-4" href="/"> THETHA </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -61,7 +61,7 @@
           </div>
           <div class="col-md-4">
             <div class="content-section">
-              <h3>BOTLHALE</h3>
+              <h3>BOTLHALE AI</h3>
               <p class='text-muted'>
                 <ul class="list-group">
                   <li class="list-group-item list-group-item-light">Latest Updates</li>
