--- a/templates/design.html
+++ b/templates/design.html
@@ -31,8 +31,8 @@
     </style>
 
     <form method="POST" action="/save" id=form1>
-        <label for="itext">Text:</label>
-        <input type="text" name="text"><br><br>
+        <h3><b>"{{ text_read }}"</b></h3>
+        <!---- <input type="text" name="text"><br><br> ---->
 
          <!-----------------BUTTONS------------------->  
          <div class="btn-group"> 
