--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,14 @@
         <title>{{ title }}</title>
     {% else %}
         <title> Login </title>
-    {% endif %}             
+    {% endif %}         
+    
+    <!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+    <script src = "{{ url_for('static', filename='form.js') }}"></script>
 </head>
 
 <style>
@@ -36,6 +43,8 @@
         <div class="btn-group">
             <input type="submit" value="Log In">
         </div>  
+        <div id="successAlert" class="alert alert-success" role="alert" style="display:none;"></div>
+	    <div id="errorAlert" class="alert alert-danger" role="alert" style="display:none;"></div> 
     </form>
     
 {% endblock content %}
